maze.lessons.maze.island.IslandMaze.scala.error
Escaper:17: error: expected class or object definition
def keepHandOnSideWall() {
^Escaper:52: error: Unmatched closing brace '}' ignored here
  }
  ^